--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -30,7 +30,7 @@ html {
 
 body {
   background-color: var(--main-color);
-  color: var(--white);
+  color: var(--black);
   font-family: 'Roboto', sans-serif;
   padding: 4rem;
 }
