--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -1,6 +1,12 @@
-.logo{
+.Logo{
     color: blue;
     display: flex;
     justify-content: center;
     margin-bottom: 1.8rem;
+
+    &__image{
+        width: 3rem;
+        height: 3rem;
+        border-radius: 50%;
+    }
 }
